InvoiceDOC. Save. Ready dor tests.